# gemstone-examples

./: .env.example  .gitignore  .marimo.toml  LICENSE.ti  Makefile  README.md  Taskfile.yml  common.mk  devbox.json  main.py  notebook.py  pyproject.toml  setup.sh  subdirs.mk
camera/: Makefile  main.py  video_processor.py
canbus/c/: Makefile
canbus/c/receiver/: Makefile  main.c
canbus/c/sender/: Makefile  main.c
canbus/cpp/receiver/: Makefile  can_receiver.cpp  (+2 more)
compass/c/: MMC5603.c  MMC5603.h  main.c
compass/cpp/: Makefile  meson.build
compass/python/: MMC5603.py
gpio/c/: Makefile  main.c
gpio/cpp/: Makefile  gpio_controller.cpp  gpio_controller.h  main.cpp  meson.build
gpio/python/: Makefile  gpio_controller.py  main.py
gui/: gcs.py
imu/: Makefile  icm20948.c  icm20948.h  main.c
imu/c/: Makefile  main.c
imu/cpp/: main.cpp
imu/python/: main.py
magnetometer/c/: MMC5603.c  MMC5603.h  Makefile  main.c
magnetometer/cpp/: MMC5603.cpp  MMC5603.h  Makefile  main.cpp
magnetometer/python/: MMC5603.py  Makefile  main.py
mcu/: Makefile
mcu/ipc_rpmsg_echo_linux/: ipc_rpmsg_echo_linux.c
preempt-rt/: Makefile  main.c
pwm/: Makefile
pwm/c/: Makefile  main.c
pwm/cpp/: Makefile  gpio_controller.cpp  gpio_controller.h  main.cpp  pwm_sysfs.cpp  pwm_sysfs.h
pwm/python/: Makefile  gpio_controller.py  main.py  pwm_sysfs.py
python-notebook/: .marimo.toml  notebook.py
serial/: Makefile
serial/c/: Makefile  main.c
serial/cpp/: Makefile  main.cpp  serial_terminal.cpp  serial_terminal.h
serial/python/: Makefile  main.py  serial_terminal.py
(+43 files in other folders)
