[project]
name = "gemstone-examples"
version = "0.1.0"
description = "www.t3gemstone.org"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.9.5",
    "gpio>=1.0.0",
    "marimo>=0.11.5",
    "seaborn>=0.13.2",
    "polars>=1.22.0",
    "pyqt6>=6.8.1",
    "pyinstaller>=6.12.0",
    "pyqtgraph>=0.13.7",
    "python-lsp-server>=1.12.2",
    "pyserial>=3.5",
    "gpiod>=2.3.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
]
